objects/Comments_SFDC2__c.object
<CustomObject>
    <description>Comments made about a customer inquiry from Synapsys, SFDC2</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message_ID__c</fullName>
        <label>Message ID</label>
        <referenceTo>Customer_Inquiry_SFDC2__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Officer_Added__c</fullName>
        <label>Officer Added</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Comments</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Comments #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>